--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
     <meta property="og:image:width" content="537"/>
     <meta property="og:image:height" content="240"/>
     <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">
-    <link href="./services/webgpu/src/this/css/index.light.css" rel="stylesheet"/>
-    <script src="./services/webgpu/src/component/nk-memory/this/mjs/terminal/modules/xterm/lib/xterm.js"></script>
-    <script src="./services/webgpu/src/component/nk-memory/this/mjs/terminal/modules/local-echo/dist/local-echo.js"></script>
-    <script src="./services/webgpu/src/component/nk-memory/this/mjs/terminal/modules/xterm-addon-fit/lib/xterm-addon-fit.js"></script>
-    <script src="./services/webgpu/src/component/nk-memory/this/mjs/terminal/modules/xterm-addon-web-links/lib/xterm-addon-web-links.js"></script>
     <script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
     <title>DevOps</title>
     <link rel="shortcut icon"
@@ -29,324 +24,8 @@
 </head>
 
 <body>
-<nk-memory>
-    <template>
-        <header>
-			<pre class="__peer-header_logo_value">
-						░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
-						░░░░░░░░░░░░░░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░░
-						░░░░░░████░░░░░░█████░░░░░░░░░░░░░░░░░░░░░░░░░
-						░░░░████████░░░███████░░░░░░░░░░░░░░░░░░░░░░░░
-						░░░██████████░█████████░░░░░░░░░░░░░░░░░░░░░░░
-						░░████████████░░█████░░░░░░░░░░░░░░░░░░░░░░░░░
-						░░░██████████░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░░
-						░░░░████████░░░░░░█████╗░██████╗░░██████╗░░░░░
-						░░░░░░░░█████░░░░██╔══██╗██╔══██╗██╔════╝░░░░░
-						░░░░░░█████████░░██║░░██║██████╔╝██║░░██╗░░░░░
-						░░░░░███████████░██║░░██║██╔══██╗██║░░╚██╗░░░░
-						░░░░░░█████████░░╚█████╔╝██║░░██║╚██████╔╝░░░░
-						░░░░░░░███████░░░░╚════╝░╚═╝░░╚═╝░╚═════╝░░░░░
-						░░░░░░░░░███░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
-						░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░</pre>
-        </header>
-        <div class="container">
-            <div class="nk-shared-protocol">
-                <slot name="nk-shared-protocol"></slot>
-            </div>
-            <div class="nk-peer">
-                <slot name="nk-peer"></slot>
-            </div>
-            <div class="wrapper">
-                <h2>Scheduler</h2>
-                <div class="settings">
-                    <div class="item hardwareConcurrency"><span class="key">Колличество логических процессоров для воркеров:</span><span
-                            class="value"></span></div>
-                </div>
-                <div class="memory-queue"></div>
-            </div>
-            <div class="nk-git">
-                <h2>DevOps</h2>
-                <slot name="nk-git"></slot>
-            </div>
-        </div>
-    </template>
-</nk-memory>
+<div>test</div>
 <script type="module">
-    let timerId = null
-    let perf = {}
-    perf.exception = {}
-    globalThis.log = 0;
-
-    const setPost = (url, data) => {
-        return new Promise((resolve, reject) => {
-            fetch(url, {
-                method: 'POST', // *GET, POST, PUT, DELETE, etc.
-                mode: 'cors', // no-cors, *cors, same-origin
-                cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-                credentials: 'same-origin', // include, *same-origin, omit
-                headers: {
-                    'Content-Type': 'application/json;charset=utf-8',
-                    'X-CSRF-TOKEN': getCookie(),
-                    'X-XSRF-TOKEN': getCookie(),
-                },
-                redirect: 'follow', // manual, *follow, error
-                referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-                body: JSON.stringify(data), // body data type must match "Content-Type" header
-            }).then(async function(response) {
-                if (response.status === 400) {
-                    throw new FetchException(await response.json());
-                } else {
-                    resolve(response.json());
-                }
-            }).catch(function(e) {
-                reject(e);
-            });
-        });
-    };
-
-    // // Helper to log a single entry.
-    function logEntry(entry) {
-        const objDict = {
-            "type": entry.entryType,
-            "name": entry.name,
-            "start": entry.startTime,
-            "duration": entry.duration,
-        };
-
-        if(entry.entryType === 'navigation') {
-            perf.performance = [{
-                name: entry.name,
-                pathname: (new URL(entry.name)).pathname,
-                start: objDict.start,
-                current: objDict.start,
-                duration: entry.duration,
-                delta: entry.duration,
-                end: 0,
-                isSending: false
-            },{ }]
-        }
-
-        if(entry.entryType === 'resource') {
-            if(window.location.pathname === perf.performance[0].pathname && !perf.performance[0].isSending) {
-                perf.performance[0].delta = objDict.start - perf.performance[0].current
-                perf.performance[0].current = objDict.start
-                perf.performance[0].duration = perf.performance[0].duration + perf.performance[0].delta
-                perf.performance[0].end = objDict.duration
-
-                if(!perf.performance[1].name) {
-                    perf.performance[1].name = objDict.name
-                    perf.performance[1].duration = objDict.duration
-                }
-
-                clearTimeout(timerId)
-
-                timerId = setTimeout(() => {
-                    clearTimeout(timerId)
-                    perf.performance[0].duration = perf.performance[0].duration + perf.performance[0].end
-                    console.log('Performance: ', perf.performance[0])
-                    for(let item of perf.performance) {
-
-                        // post('/api/v1/metric', {
-                        //     "uiResponse" : {
-                        //         "deltaTime": item.duration,
-                        //         "path": (new URL(item.name)).pathname
-                        //     }
-                        // })
-                    }
-
-                    perf.performance[0].isSending = true
-                }, 5000);
-            }
-        }
-    }
-
-    // // Call to log all previous and future User Timing entries.
-    function logUserTiming() {
-        if (!PerformanceObserver.supportedEntryTypes.includes("element")) {
-            console.log("element are not observable");
-        } else {
-            perf.observer.observe({type: "element", buffered: true});
-        }
-
-        if (!PerformanceObserver.supportedEntryTypes.includes("event")) {
-            console.log("event are not observable");
-        } else {
-            perf.observer.observe({type: "event", buffered: true});
-        }
-
-        if (!PerformanceObserver.supportedEntryTypes.includes("first-input")) {
-            console.log("first-input are not observable");
-        } else {
-            perf.observer.observe({type: "first-input", buffered: true});
-        }
-
-        if (!PerformanceObserver.supportedEntryTypes.includes("navigation")) {
-            console.log("navigation are not observable");
-        } else {
-            perf.observer.observe({type: "navigation", buffered: true});
-        }
-        //
-        if (!PerformanceObserver.supportedEntryTypes.includes("resource")) {
-            console.log("resource are not observable");
-        } else {
-            perf.observer.observe({type: "resource", buffered: true});
-        }
-
-        if (!PerformanceObserver.supportedEntryTypes.includes("visibility-state")) {
-            console.log("visibility-state are not observable");
-        } else {
-            perf.observer.observe({type: "visibility-state", buffered: true});
-        }
-
-        if (!PerformanceObserver.supportedEntryTypes.includes("layout-shift")) {
-            console.log("layout-shift are not observable");
-        } else {
-            perf.observer.observe({type: "layout-shift", buffered: true});
-        }
-
-        if (!PerformanceObserver.supportedEntryTypes.includes("longtask")) {
-            console.log("longtask are not observable");
-        } else {
-            perf.observer.observe({type: "longtask", buffered: true});
-        }
-
-        if (!PerformanceObserver.supportedEntryTypes.includes("largest-contentful-paint")) {
-            console.log("largest-contentful-paint are not observable");
-        } else {
-            perf.observer.observe({type: "largest-contentful-paint", buffered: true});
-        }
-
-        if (!PerformanceObserver.supportedEntryTypes.includes("mark")) {
-            console.log("Marks are not observable");
-        } else {
-            perf.observer.observe({type: "mark", buffered: true});
-        }
-        if (!PerformanceObserver.supportedEntryTypes.includes("measure")) {
-            console.log("Measures are not observable");
-        } else {
-            perf.observer.observe({type: "measure", buffered: true});
-        }
-    }
-
-    // Call to stop logging entries.
-    function stopLoggingUserTiming() {
-        perf.observer.disconnect();
-    }
-
-    // Call to force logging queued entries immediately.
-    function flushLog() {
-        perf.observer.takeRecords().forEach(entry => {
-            logEntry(entry);
-        });
-    }
-
-
-    perf.observer = new PerformanceObserver(list => {
-        list.getEntries().forEach(entry => {
-            logEntry(entry);
-        });
-    });
-
-    logUserTiming()
-
-
-    import {Fonts} from './services/webgpu/src/fonts.mjs';
-
-    await Fonts('Raleway', 'Raleway-Regular.ttf');
-    await Fonts('Raleway-ExtraBold', 'Raleway-ExtraBold.ttf');
-
-    function FetchException(message) {
-        perf.exception.push({
-            message: message,
-            name: 'FetchException'
-        });
-    }
-
-    const request = (url, data) => {
-        return new Promise((resolve, reject) => {
-                fetch(url, {
-                    method: 'POST', // *GET, POST, PUT, DELETE, etc.
-                    mode: 'cors', // no-cors, *cors, same-origin
-                    cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-                    credentials: 'same-origin', // include, *same-origin, omit
-                    headers: {
-                        'X-CSRF-TOKEN': getCookie(),
-                        'X-XSRF-TOKEN': getCookie(),
-                    },
-                    redirect: 'follow', // manual, *follow, error
-                    referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-                    body: JSON.stringify(data), // body data type must match "Content-Type" header
-                }).then(async function(response) {
-                    if (response.status === 400) {
-                        throw new FetchException(await response.json());
-                    } else {
-                        resolve(response.json());
-                    }
-                }).catch(function(e) {
-                    reject(e);
-                });
-            resolve(true)
-        });
-    };
-
-    function getCookie(name) {
-        if (!document.cookie) {
-            return null;
-        }
-
-        let cookieToken = document.cookie.replace(
-            /(?:(?:^|.*;\s*)XSRF-TOKEN\s*\=\s*([^;]*).*$)|^.*$/,
-            '$1',
-        );
-
-        if (cookieToken.length === 0) {
-            return null;
-        }
-        return decodeURIComponent(cookieToken);
-    }
-
-    let normalizeLocation = window.location.pathname
-    if (!normalizeLocation.endsWith('/')) {
-        normalizeLocation = normalizeLocation.split('/')
-        normalizeLocation.pop()
-        normalizeLocation = `${normalizeLocation.join('/')}/`
-    }
-
-    navigator.serviceWorker.register('./sw.mjs', {
-        type: 'module',
-        scope: normalizeLocation
-    }).then((registration) => {
-        console.log('Service worker registered successfully', registration);
-
-        registration.onupdatefound = function () {
-            var newSW = registration.installing;
-            newSW.onstatechange = function () {
-                if (newSW.state === 'waiting') {
-                    newSW.postMessage({
-                        type: 'skipWaiting'
-                    });
-                }
-            };
-        };
-
-        let isController = false
-
-        navigator.serviceWorker.addEventListener('message', (event) => {
-            if (!isController && event.data.type === 'SW_ACTIVATED') {
-                window.location.reload();
-            }
-        });
-
-        if (navigator.serviceWorker.controller) {
-            isController = true
-            registration.active.postMessage({
-                type: "get-client-id"
-            });
-        }
-    }).catch((err) => {
-        console.log('Service worker registration failed: ', err);
-    });
-
     window.YaAuthSuggest.init(
         {
             client_id: "32480cdd2cf24a6a8ec4c27da7294e62",
