--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         {
             client_id: "32480cdd2cf24a6a8ec4c27da7294e62",
             response_type: "token",
-            redirect_uri: "https://zababurinsergei.github.io/market/"
+            redirect_uri: "https://zababurinsergei.github.io/market/oauth2-redirect.html"
         },
         "https://zababurinsergei.github.io",
         {
