--- a/oauth2-redirect.html
+++ b/oauth2-redirect.html
@@ -10,5 +10,5 @@
 </body>
 </html>
 <script>
-    YaSendSuggestToken('https://zababurinsergei.github.io/market/oauth2-redirect.html')
+    YaSendSuggestToken('https://zababurinsergei.github.io/market')
 </script>
