--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta property="og:image:width" content="537"/>
     <meta property="og:image:height" content="240"/>
     <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">
-    <link rel="stylesheet" href="./services/market/src/this/css/index.light.css" />
     <script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
     <title>DevOps</title>
     <link rel="shortcut icon"
@@ -24,6 +23,9 @@
           type="image/png">
 </head>
 <body>
+<style>
+    @import url('./services/market/src/this/css/index.light.css');
+</style>
 <nk-swagger
         id="nk-swagger_0"
 >
@@ -62,7 +64,6 @@
 
 <script type="module">
     const init = async (auth) => {
-        debugger
         console.log('Сообщение с токеном', auth)
         await import('./index.mjs')
     }
