--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <script type="module">
     import { store } from './services/market/src/this/index.mjs'
 
-    const suth = store.get('authorization')
+    const auth = store.get('authorization')
     const init = async (auth) => {
         window.localStorage.setItem('authorization', JSON.stringify({
             expires_in: auth.expires_in,
@@ -82,7 +82,7 @@
         await import('./index.mjs')
     }
 
-    if (!suth) {
+    if (!auth) {
         window.YaAuthSuggest.init(
             {
                 client_id: "88d4aef967d14177922e081aead43590",
@@ -95,6 +95,8 @@
         .then(({handler}) => handler())
         .then(data => init(data))
         .catch(error => console.log('Обработка ошибки', error))
+    } else {
+        init(auth)
     }
 </script>
 </body>
