--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
 <script type="module">
     import { store } from './services/market/src/this/index.mjs'
-
     let auth = store.get('authorization')
+
     const init = async (auth, isAuth = false) => {
         if(!isAuth) {
             store.set('authorization', {
@@ -87,17 +87,7 @@
             }
         }
 
-
-        const api = await import('./services/market/src/api/index.mjs')
-        const campaignsApi = new api.CampaignsApi();
-        campaignsApi.apiClient.authentications['OAuth'].accessToken = auth;
-
-        campaignsApi.getCampaigns(undefined, function (error, data) {
-            console.log('---------------------------------', JSON.stringify(data, null, 4));
-        });
-        // console.log('api', api)
-        // debugger
-        await import('./index.mjs')
+        await import('./services/market/src/component/index.mjs')
     }
 
     if (!auth) {
