--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://i.imgur.com/pSrPUkJ.jpg"/>
     <meta property="og:image:width" content="537"/>
     <meta property="og:image:height" content="240"/>
-    <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">
+<!--    <link rel="manifest" href="./manifest.json" crossorigin="use-credentials">-->
     <script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
     <title>DevOps</title>
     <link rel="shortcut icon"
