--- a/oauth2-yandex-redirect.html
+++ b/oauth2-yandex-redirect.html
@@ -10,5 +10,5 @@
 </body>
 </html>
 <script>
-    YaSendSuggestToken('https://zababurinsergei.github.io/market')
+    YaSendSuggestToken('https://market-iewb.onrender.com')
 </script>
